<resources>
    <string name="app_name">图片分享</string>
    <string name="logIn">SIGN IN</string>
    <string name="register">SIGN UP</string>
    <string name="username">账号</string>
    <string name="register_name">用户名</string>
    <string name="register_password">密码</string>
    <string name="password_repeat">请再次输入密码</string>
    <string name="password">密码</string>
    <string name="signIn">登录</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="signUp">注册</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">发布</string>
    <string name="title_notifications">我</string>
    <string name="editInfo">编辑资料</string>
    <string name="umbrella">Umbrella</string>
    <string name="id_20201008">id: 20201008</string>
    <string name="signature">这个人很懒，什么都没留下。</string>
    <string name="_50">50</string>
    <string name="_4">4</string>
    <string name="subscribe">关注</string>
    <string name="fans">粉丝</string>
    <string name="_200">200</string>
    <string name="fonded">获赞</string>
    <string name="release_title">标题</string>
    <string name="editYourText">编辑你的文本吧~</string>
    <string name="releasePic">发布</string>
    <string name="item_title">#休闲时光#</string>
    <string name="item_name">陈Kevin</string>
    <string name="modify_info">编辑资料</string>
    <string name="nick_name">昵称</string>
    <string name="release_topic">话题</string>
    <string name="user_name">用户名</string>
    <string name="save">保存</string>
    <string name="my_settings">我的设置</string>
    <string name="privacy">隐私设置</string>
    <string name="account_and_safety">账号与安全</string>
    <string name="teenagerModel">青少年模式</string>
    <string name="darkTheme">深色模式</string>
    <string name="aboutUs">关于我们</string>
    <string name="timeStamp">20-10-15</string>
    <string name="_666">666</string>
    <string name="confirmMessage">确认取消正在编辑的发布内容吗？</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="rememberPassword">记住密码</string>

    <!--  需要保存的个人信息  -->
    <string name="appName">pictureSharing</string>
    <string name="shared_preferences_file_name">sp_logIn</string>
    <string name="account_username">name</string>
    <string name="account_password">pwd</string>
    <string name="logIn_remember_password">login_remember_password</string>
    <string name="add_subscribe">+ 关注</string>
    <string name="comments">评论</string>
    <string name="addComment">发表评论…</string>
    <string name="send">发送</string>
    <string name="tag">标签</string>
    <string name="original">原创</string>
    <string name="non_original">非原创</string>
    <string name="non_commerce">禁商用</string>
    <string name="non_copy">禁临摹</string>
    <string name="commit_time">三分钟前</string>
</resources>