<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <!-- 账号栏android:background="@drawable/login_bg" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/logIn"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp">

        <!-- 图片显示，true是，是否显示图片 -->
        <ImageView
            android:layout_width="32dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_account_circle_24" />
        <!-- 提示词和下划线 -->
        <EditText
            android:id="@+id/logInUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1" />
    </RelativeLayout>


    <!-- 密码栏 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp">
        <!-- 图片显示，true是，是否显示图片 -->
        <ImageView
            android:layout_width="32dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_lock_24" />

        <!-- 提示词和下划线 -->
        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="密码"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black" />

        <!-- 密码可见，不可见的眼睛图标 -->
        <ImageView
            android:id="@+id/iv_pwd_switch"
            android:layout_width="32dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/ic_baseline_visibility_off_24" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        >
        <CheckBox
            android:id="@+id/rememberPassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberPassword"
            />
    </LinearLayout>

    <!-- 登录按钮 -->
    <RelativeLayout
        android:id="@+id/signInArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/radius"
            android:text="@string/signIn"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:paddingTop="20dp">
        <!-- 忘记 -->
        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_alignParentStart="true"
            android:text="@string/forgetPassword"
            android:textColor="@color/currentTheme"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <!-- 注册 -->
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:text="@string/signUp"
            android:textColor="@color/currentTheme"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

</LinearLayout>