<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MySettings"
    android:background="@color/white3">

    <Toolbar
        android:id="@+id/toolBarOfSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="20dp"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/backToPersonal"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/back"
            android:layout_gravity="left"
            />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/my_settings"
            android:textColor="#5f5f5f"
            android:textSize="25sp"
            android:background="@color/white"
            />
    </Toolbar>

    <LinearLayout
        android:id="@+id/item1"
        app:layout_constraintTop_toBottomOf="@+id/toolBarOfSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/account_and_safety"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/privacy"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray3"
            />

    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/item1"
        android:id="@+id/item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/teenagerModel"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/darkTheme"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray3"
            />

    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/aboutUs"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray3"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>